--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,5 +10,29 @@
 
     </group>
 
+    <group android:checkableBehavior="single">
 
+        <item
+            android:title="Profile">
+            <menu >
+                <item android:id="@+id/nav_change_password"
+                    android:title="Change Password"
+                    android:icon="@drawable/ic_baseline_person_24"/>
+            </menu>
+        </item>
+
+    </group>
+
+    <group android:checkableBehavior="single">
+
+        <item
+            android:title="Logout">
+            <menu >
+                <item android:id="@+id/nav_log_out"
+                    android:title="Logout"
+                    android:icon="@drawable/ic_signout"/>
+            </menu>
+        </item>
+
+    </group>
 </menu>
