--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:background="@drawable/reg_edittext_style"
         android:hint="Mail"
         android:textColorHint="#828282"
-        android:textColor="#ffffff"
+        android:textColor="#000"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -52,7 +52,7 @@
         android:ems="10"
         android:hint="Password"
         android:textColorHint="#828282"
-        android:textColor="#ffffff"
+        android:textColor="#000"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
