--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="colorAccent">#00b0ff</color>
     <color name="darkBlur">#373535</color>
     <color name="darkBlurDark">#151c25</color>
-    <color name="orangeBold">#f1b814</color>
+    <color name="orangeBold">#FFED50</color>
 </resources>
